Commit to master Blogpost recent version

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Here we do a post Blog</h1>
-  <p>This is the initial paragraph</p>
+  <div id="container">
+    <div id="post">
+      <h1>This is a title atractive e interisting Post</h1>
+      <p>Here we go to explain the interisting things</p>
+    </div>
+  </div>
 </body>
 </html>
