--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <div id="container">
+    <div id="header">
+      Header
+    </div>
     <div id="post">
       <h1>This is a title atractive e interisting Post</h1>
       <p>Here we go to explain the interisting things</p>
