--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
   <div id="container">
     <div id="header">
-      Header
+      HyperBlog <span id="tagline">You confidence in this Blog</span>
     </div>
     <div id="post">
       <h1>This is a title atractive e interisting Post</h1>
