Final content Blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,9 @@
     <div id="post">
       <h1>This is a title atractive e interisting Post</h1>
       <p>Here we go to explain the interisting things</p>
+      <p>
+        The blogs are the best way to share information
+      </p>
     </div>
   </div>
 </body>
