--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
   <div id="container">
     <div id="header">
-      HyperBlog <span id="tagline">You confidence in this Blog</span>
+      HyperBlog <span id="tagline">You MASTER in this Blog</span>
     </div>
     <div id="post">
       <h1>This is a title atractive e interisting Post</h1>
@@ -18,6 +18,7 @@
       <p>
         The blogs are the best way to share information
       </p>
+      <p>Suscribe and like</p>
     </div>
   </div>
 </body>
