--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
   <div id="container">
     <div id="header">
+      <img src="assets/images/Dragon.png" alt="" id="logo">
       HyperBlog <span id="tagline">You HEADER in this Blog</span>
     </div>
     <div id="post">
