--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
         The blogs are the best way to share information
       </p>
     </div>
+    <div id="footer">
+      This is the footer
+    </div>
   </div>
 </body>
 </html>
